# MechanicsProgramsRust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
BesselGraph/: Cargo.toml  build.rs
BesselGraph/src/: bessel_func.rs  main.rs  plot_widget.rs
FluidCalc/: Cargo.toml  build.rs
FluidCalc/src/: flow_func.rs  main.rs
FluidView/: Cargo.toml  build.rs
FluidView/src/: fluid_func.rs  graph_widget.rs  main.rs
MechanicalPendulum/: Cargo.toml  build.rs
MechanicalPendulum/src/: coupled_pendulums.rs  double_pendulum.rs  draw_primitives.rs  elastic_pendulum.rs  frame_saver.rs  main.rs  param_list.rs  param_table_widget.rs  pendulum_model.rs  res.rs  simple_pendulum.rs
MediaWave/: Cargo.toml  build.rs
MediaWave/src/: frame_saver.rs  main.rs  main_window.rs  pipe_model.rs  plot_widget.rs
WaveView/: Cargo.toml  build.rs
WaveView/src/: frame_saver.rs  main.rs  main_window.rs  surface_functions.rs  wave_model.rs  wave_widget.rs
