[package]
name = "fluid_calc"
version = "1.0.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
fltk = { version = "1", features = ["fltk-bundled"] }

[dependencies]
cascade = "1.0.1"
fltk = "1"
rust-embed = "8.3"
